@@ -1,3 +1,8 @@
+2017-08-01  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/81622
+	* gcc.target/powerpc/pr81622.c: New test.
+
 2017-08-01  Steve Ellcey  <sellcey@cavium.com>
 
 	PR tree-optimization/80925
